generated/manifests/prod-axon/flaresolverr/Deployment-flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: flaresolverr
    app.kubernetes.io/name: flaresolverr
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: flaresolverr
      app.kubernetes.io/name: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: flaresolverr
        app.kubernetes.io/name: flaresolverr
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: LOG_LEVEL
              value: info
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: TZ
              value: America/Los_Angeles
          image: ghcr.io/flaresolverr/flaresolverr@sha256:c80ae007ce2ccdcd217a12426e4f039ef763ff90738c808d38810c3e59323767
          name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: flaresolverr
